Added new values to theonfig file.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Install composer dependencies
         run: |
           composer install
+          composer fix-styles
 
       - name: Prepare Laravel Application
         run: |
